--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,15 @@ readme = "README.md"
 [lib]
 path = "lib.rs"
 
+[features]
+eserde = ["erased-serde"]
+default = ["eserde"]
+
 [dependencies]
-slog = "2"
+# slog = "2"
+slog = {path = "../slog", features = ["serde"]}
 serde_json = "1"
 serde = "1"
 chrono = "0.4"
+
+erased-serde = {version = "0.3", optional = true }
