--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,14 @@ readme = "README.md"
 [lib]
 path = "lib.rs"
 
+[features]
+
+default = []
+opaque-keys = []
+
 [dependencies]
-slog = "2"
+slog = "2.0.12"
 serde_json = "1"
 serde = "1"
 chrono = "0.4"
+
