--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "slog-json"
 version = "2.4.0"
+edition = "2018"
 authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
 description = "JSON drain for slog-rs"
 keywords = ["slog", "logging", "json"]
@@ -9,9 +10,6 @@ documentation = "https://docs.rs/slog-json"
 homepage = "https://github.com/slog-rs/slog"
 repository = "https://github.com/slog-rs/json"
 readme = "README.md"
-
-[lib]
-path = "lib.rs"
 
 [features]
 nested-values = ["erased-serde", "slog/nested-values"]
