--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ default = []
 slog = { version = "2.1.1" }
 serde_json = "1"
 serde = "1"
-chrono = "0.4"
+chrono = { version = "0.4", default-features = false, features = ["clock"] }
 erased-serde = {version = "0.3", optional = true }
 
 [dev-dependencies]
