License under Apache/MIT/MPL
This PR copies the licenses introduced into `slog` from
slog-rs/slog@f9ae3188f21bc4d3f3cc1f7c0a21e709cfd80e7f and slog-rs/slog#134.

This PR differs slightly from the above by using an SPDX `OR` expression
as documented in the cargo manifest format:

https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields

Fixes #24.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
 description = "JSON drain for slog-rs"
 keywords = ["slog", "logging", "json"]
-license = "MPL-2.0"
+license = "MPL-2.0 OR MIT OR Apache-2.0"
 documentation = "https://docs.rs/slog-json"
 homepage = "https://github.com/slog-rs/slog"
 repository = "https://github.com/slog-rs/json"
