--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ default = []
 slog = { version = "2.1.1" }
 serde_json = "1"
 serde = "1"
-chrono = { version = "0.4", default-features = false, features = ["clock"] }
 erased-serde = {version = "0.3", optional = true }
+time = { version = "0.3.6", features = ["formatting", "local-offset"] }
 
 [dev-dependencies]
 slog-async = "2"
